[gd_scene load_steps=12 format=3 uid="uid://cia1qymus5xtg"]

[ext_resource type="Script" uid="uid://bx4rmethejjhf" path="res://scenes/status_panel.gd" id="1_27we0"]
[ext_resource type="Texture2D" uid="uid://bcaedxvwl4q71" path="res://assets/Main Characters/Virtual Guy/Idle (32x32).png" id="1_rqlg0"]
[ext_resource type="Theme" uid="uid://dq2k6takiambk" path="res://themes/theme.tres" id="2_27we0"]
[ext_resource type="Texture2D" uid="uid://c3x3sl3dh28le" path="res://assets/Menu/HUD.png" id="3_fqsbo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_27we0"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
texture = ExtResource("3_fqsbo")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0
region_rect = Rect2(3, 130, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncrt1"]
atlas = ExtResource("1_rqlg0")
region = Rect2(6, 8, 21, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghfl5"]
atlas = ExtResource("3_fqsbo")
region = Rect2(307, 21, 58, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_jclqc"]
atlas = ExtResource("3_fqsbo")
region = Rect2(308, 118, 56, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_alt5q"]
atlas = ExtResource("3_fqsbo")
region = Rect2(308, 86, 56, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxxnw"]
atlas = ExtResource("3_fqsbo")
region = Rect2(307, 6, 58, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_7r7sv"]
atlas = ExtResource("3_fqsbo")
region = Rect2(308, 39, 56, 2)

[node name="StatusPanel" type="HBoxContainer"]
theme_override_constants/separation = 3
script = ExtResource("1_27we0")

[node name="AvatarBox" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_27we0")

[node name="Avatar" type="TextureRect" parent="AvatarBox"]
layout_mode = 2
texture = SubResource("AtlasTexture_ncrt1")
stretch_mode = 3

[node name="V" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 3
alignment = 1

[node name="HealthBar" type="TextureProgressBar" parent="V"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_27we0")
max_value = 1.0
step = 0.0
value = 0.8
texture_over = SubResource("AtlasTexture_ghfl5")
texture_progress = SubResource("AtlasTexture_jclqc")
texture_progress_offset = Vector2(1, 1)

[node name="EasedHealthBar" type="TextureProgressBar" parent="V/HealthBar"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme = ExtResource("2_27we0")
max_value = 1.0
step = 0.0
value = 1.0
texture_progress = SubResource("AtlasTexture_alt5q")
texture_progress_offset = Vector2(1, 1)

[node name="EnergyBar" type="TextureProgressBar" parent="V"]
layout_mode = 2
theme = ExtResource("2_27we0")
max_value = 1.0
step = 0.0
value = 1.0
texture_over = SubResource("AtlasTexture_pxxnw")
texture_progress = SubResource("AtlasTexture_7r7sv")
texture_progress_offset = Vector2(1, 1)
